--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-368.2KB/s(Youtube:不良林), server: hkbgp2.jiantian.xyz, port: 34532, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: 103.56.60.235, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.05MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林), server: 185.167.116.253, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇨🇳 中国-3.18MB/s(Youtube:不良林), server: 103.56.60.235, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.88MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-319.6KB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林), server: 185.167.116.253, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇳🇱 荷兰-1.26MB/s(Youtube:不良林), server: 213.183.59.214, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇳🇱 荷兰-1.97MB/s(Youtube:不良林), server: 213.183.59.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇳🇱 荷兰-1.65MB/s(Youtube:不良林), server: 213.183.59.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇭🇰 香港-879.1KB/s(Youtube:不良林), server: jp06.jafiyun.life, port: 21233, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: jp06.jafiyun.life, skip-cert-verify: true}
+  - {name: 乌克兰-679.9KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林), server: 213.183.53.207, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
+  - {name: 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-368.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
+      - 乌克兰-679.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-368.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
+      - 乌克兰-679.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-368.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
+      - 乌克兰-679.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-368.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
+      - 乌克兰-679.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-368.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
+      - 乌克兰-679.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-368.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
+      - 乌克兰-679.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-368.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.05MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-179.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.18MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-319.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-617.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
+      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
+      - 乌克兰-679.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
