--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇳🇱 荷兰-1.97MB/s(Youtube:不良林), server: 213.183.59.214, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇳🇱 荷兰-1.65MB/s(Youtube:不良林), server: 213.183.59.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇭🇰 香港-879.1KB/s(Youtube:不良林), server: jp06.jafiyun.life, port: 21233, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: jp06.jafiyun.life, skip-cert-verify: true}
-  - {name: 乌克兰-679.9KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林), server: 213.183.53.207, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 213.183.53.177, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
-  - {name: 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇳🇱 荷兰-172.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇳🇱 荷兰-153.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇳🇱 荷兰-833.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-241.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 柬埔寨-1.74MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 443, type: trojan, password: b8d5a1e1-17cb-3200-afb6-a9463692b83a, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-576.0KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.71MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-300.7KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
-      - 乌克兰-679.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
+      - 柬埔寨-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
-      - 乌克兰-679.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
+      - 柬埔寨-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
-      - 乌克兰-679.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
+      - 柬埔寨-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
-      - 乌克兰-679.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
+      - 柬埔寨-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
-      - 乌克兰-679.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
+      - 柬埔寨-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
-      - 乌克兰-679.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
+      - 柬埔寨-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-879.1KB/s(Youtube:不良林)
-      - 乌克兰-679.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-312.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-733.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1022.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
+      - 柬埔寨-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
