--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇳🇱 荷兰-172.9KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇳🇱 荷兰-153.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇳🇱 荷兰-833.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇳🇱 荷兰-241.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 柬埔寨-1.74MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 443, type: trojan, password: b8d5a1e1-17cb-3200-afb6-a9463692b83a, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-576.0KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.71MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-300.7KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-229.5KB/s(Youtube:不良林), server: jp06.jafiyun.life, port: 21233, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: jp06.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-179.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇳🇱 荷兰-218.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇺🇸 美国-206.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 柬埔寨-708.1KB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: eed5c3e1-2d36-4429-8795-2ed74d374f23, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
+  - {name: 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 柬埔寨-708.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 柬埔寨-708.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 柬埔寨-708.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 柬埔寨-708.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 柬埔寨-708.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 柬埔寨-708.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-197.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-172.9KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-153.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-172.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-833.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-241.8KB/s(Youtube:不良林)
-      - 柬埔寨-1.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-576.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
+      - 柬埔寨-708.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
