--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-229.5KB/s(Youtube:不良林), server: jp06.jafiyun.life, port: 21233, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: jp06.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-720.8KB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-179.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇳🇱 荷兰-218.7KB/s(Youtube:不良林), server: 213.183.59.214, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-498.6KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20000, type: trojan, password: 604c3e18-a40a-434e-bcc1-d810845bf034, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-152.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
   - {name: 🇺🇸 美国-206.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
-  - {name: 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇩🇪 德国-1.10MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 柬埔寨-708.1KB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: eed5c3e1-2d36-4429-8795-2ed74d374f23, sni: kh1.nodegz.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-317.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
   - {name: 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇳🇱 荷兰-216.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇳🇱 荷兰-233.8KB/s(Youtube:不良林), server: 213.183.59.214, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
+  - {name: 🇨🇳 中国-469.7KB/s(Youtube:不良林), server: scloud28.jafiyun.life, port: 22028, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud28.jafiyun.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 柬埔寨-708.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 柬埔寨-708.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 柬埔寨-708.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 柬埔寨-708.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 柬埔寨-708.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 柬埔寨-708.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-720.8KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-179.0KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-218.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-498.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-152.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-206.4KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-208.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-659.3KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.10MB/s(Youtube:不良林)
-      - 柬埔寨-708.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-317.0KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-266.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-216.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-233.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
